# docs/swagger.json
@@ -459,6 +459,65 @@
                 }
             }
         },
+        "/api/v1/rules/evaluate-batch": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    },
+                    {
+                        "PSK": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rule evaluation"
+                ],
+                "summary": "Evaluate up to 100 rule requests",
+                "parameters": [
+                    {
+                        "description": "Evaluation batch",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httptransport.BatchEvaluateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httptransport.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "$ref": "#/definitions/httptransport.BatchEvaluateResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Code 10001: batch size must be between 1 and 100",
+                        "schema": {
+                            "$ref": "#/definitions/httptransport.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/version": {
             "post": {
                 "produces": [
@@ -617,6 +676,45 @@
                 }
             }
         },
+        "httptransport.BatchEvaluateRequest": {
+            "type": "object",
+            "properties": {
+                "requests": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/httptransport.EvaluateRequest"
+                    }
+                }
+            }
+        },
+        "httptransport.BatchEvaluateResponse": {
+            "type": "object",
+            "properties": {
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/httptransport.BatchEvaluateResult"
+                    }
+                }
+            }
+        },
+        "httptransport.BatchEvaluateResult": {
+            "type": "object",
+            "properties": {
+                "error_code": {
+                    "type": "integer"
+                },
+                "error_message": {
+                    "type": "string"
+                },
+                "index": {
+                    "type": "integer"
+                },
+                "response": {
+                    "$ref": "#/definitions/httptransport.EvaluateResponse"
+                }
+            }
+        },
         "httptransport.CreateRuleSetRequest": {
             "type": "object",
             "properties": {
@@ -668,6 +766,26 @@
                 },
                 "version_number": {
                     "type": "integer"
+                }
+            }
+        },
+        "httptransport.EvaluateResponse": {
+            "type": "object",
+            "properties": {
+                "checksum": {
+                    "type": "string"
+                },
+                "evaluated_version_number": {
+                    "type": "integer"
+                },
+                "matched": {
+                    "type": "boolean"
+                },
+                "matched_rule": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "object"
                 }
             }
         },
